hphp/hack/test/typecheck/reactive/references_in_rx4.php.exp
File "references_in_rx4.php", line 5, characters 11-13:
References are not allowed in reactive code. (Naming[2088])
