hphp/hack/test/typecheck/reactive/references_in_rx4.php
<?hh

// ERROR
<<__Rx>>
function &foo(): int {
  throw new Exception();
}
